<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Wooditude</string>
    <string name="service_name">Wooditude location sync</string>
    <string name="menu_account">Account</string>
    <string name="menu_manualsync">Manual Sync</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="account_label">Account</string>
    <string name="settings_label">Settings</string>
    <string name="syncfrequency_label">Sync Frequency</string>
    <string name="about_label">About</string>
    <string name="version_label">Version:</string>
    <string-array name="syncintervals_labels">
        <item >4 Minutes</item>
        <item >8 Minutes</item>
        <item >16 Minutes</item>
        <item >32 Minutes</item>
        <item >1 Hour 4 Minutes</item>
        <item >Debug 3 second</item>
    </string-array>
    <string-array name="syncinterval_values">
        <item >240000</item>
        <item >480000</item>
        <item >960000</item>
        <item >1920000</item>
        <item >3840000</item>
        <item >3000</item>
    </string-array>
    <string name="add_geofence">Add Geofences</string>
    <string name="geofence_add_done_label">Done</string>
    <string name="gefoence_done">Done</string>
    <string name="add_geofence_cancel_label">Cancel</string>
    <string name="clear_geofences">Clear Geofences</string>
    <string name="geofence_name">Geofence name</string>
    <string name="location_reporting">Location reporting</string>
    <string name="personal_geofence">Personal geofence</string>
    <string name="misc_pref">Misc</string>
</resources>
