<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/account_label" >
        <EditTextPreference android:title="@string/username_label" android:key="username"/>
        <EditTextPreference
            android:password="true"
            android:key="password"
            android:title="@string/password_label" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/syncfrequency_label">
        <ListPreference android:entries="@array/syncintervals_labels" android:entryValues="@array/syncinterval_values" android:title="@string/syncfrequency_label" android:key="syncinterval"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/misc_pref">
		<SwitchPreference android:title="@string/location_reporting" android:key="locationreporting" android:defaultValue="true"/>
		<SwitchPreference android:title="@string/personal_geofence" android:key="personalgeofence" android:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>